--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,3 +6,8 @@
 
 - Fixed an exploit where falling blocks generate TP
 - Made combination Ribbons incompatible with their downgrades
+- Fixed TP items being weird when it came to potion sickness
+
+
+- Balancing:
+	- White Ribbon: 25% reduced Potion Sickness from TP items -> TP items restore 25% more TP
