Fix and bunch of stuff moving around

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,7 +7,8 @@
 - Fixed an exploit where falling blocks generate TP
 - Made combination Ribbons incompatible with their downgrades
 - Fixed TP items being weird when it came to potion sickness
-
+- Fixed the Auto Ax and Toxic Ax being unobtainable due to unregistered recipes
+- Improved a lot of the engine behind the hood
 
 - Balancing:
 	- White Ribbon: 25% reduced Potion Sickness from TP items -> TP items restore 25% more TP
